@@ -1,7 +1,6 @@
 
 Goals for next release:
 -----------------------
-* Add check for multiple functions/methods/classes w/same name
 * Type check object access based on possible types
 * Improve handling when importing packages
 
