@@ -44,6 +44,7 @@ Types of problems that can be found include:
   <li> Using format strings that don't match arguments
   <li> Using class methods and attributes that don't exist
   <li> Changing signature when overriding a method
+  <li> Redefining a function/class/method in the same scope
   <li> Using a variable before setting it
   <li> self is not the first parameter defined for a method
   <li> Unused globals and locals (module or variable)
