@@ -42,6 +42,7 @@ _OPTIONS = [
  ('T', 0, 'argsused', 'argumentsUsed', 'unused method/function arguments'),
  ('G', 0, 'selfused', 'ignoreSelfUnused', 'ignore if self is unused in methods'),
  ('o', 0, 'override', 'checkOverridenMethods', 'check if overridden methods have the same signature'),
+ ('U', 0, 'reuseattr', 'redefiningFunction', 'check if function/class/method names are reused'),
  None,
  ('r', 0, 'returnvalues', 'checkReturnValues', 'check consistent return values'),
  None,
@@ -156,6 +157,7 @@ class Config :
 
         self.argumentsUsed = 1
         self.ignoreSelfUnused = 0
+        self.redefiningFunction = 1
 
         self.maxLines = 200
         self.maxBranches = 50
