@@ -55,6 +55,9 @@ argumentsUsed = 1
 # bool: ignore if self is unused in methods
 ignoreSelfUnused = 0
 
+# bool: warn if functions/classes/methods names are redefined in same scope
+redefiningFunction = 1
+
 # bool:  check if an overriden method has the same signature
 #	 as base class method (__init__() methods are not checked)
 checkOverridenMethods = 1
